--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div.tooltip {
     position: absolute;			
     text-align: center;			
     width: 70px;					
-    height: 50px;					
+    height: 100%;					
     padding: 2px;				
     font: 12px sans-serif;		
     background: lightgrey;	
@@ -34,10 +34,10 @@ div.tooltip {
 <body>
 <a href = "designs.html">Back</a>
 <h3>U.S. Motor Fatalities by State in 2015</h3>
-<p>Source: <a href = "http://www.iihs.org/iihs/topics/t/general-statistics/fatalityfacts/state-by-state-overview">IIHS/HLDI: Population, fatal motor vehicle crashes, motor vehicle crash deaths and motor vehicle crash death rates per state, 2015</a></p>
+<p>Source: <a href = "http://www.iihs.org/iihs/topics/t/general-statistics/fatalityfacts/state-by-state-overview">Population, fatal motor vehicle crashes, motor vehicle crash deaths and motor vehicle crash death rates per state, 2015</a></p>
 <svg class="chart"></svg>
 <script src="//d3js.org/d3.v3.min.js"></script>
-<script src = "index.js"></script>
+<script src = "histogram.js"></script>
 </body>
 
 </html>
