--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ div.tooltip {
 <p>Source: <a href = "http://www.iihs.org/iihs/topics/t/general-statistics/fatalityfacts/state-by-state-overview">Population, fatal motor vehicle crashes, motor vehicle crash deaths and motor vehicle crash death rates per state, 2015</a></p>
 <svg class="chart"></svg>
 <script src="//d3js.org/d3.v3.min.js"></script>
-<script src = "histogram.js"></script>
+<script src = "index.js"></script>
 </body>
 
 </html>
